[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
indicatif = "0.17"
sha2 = "0.10.8"
rand = "0.8"
rand_seeder = "0.3"
rand_pcg = "0.3.1"